@@ -3,6 +3,7 @@ package com.agentic.docs.core.scanner;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.context.event.ContextRefreshedEvent;
 import org.springframework.context.event.EventListener;
 import org.springframework.core.annotation.Order;
@@ -19,21 +20,13 @@ import org.springframework.web.bind.annotation.RequestParam;
 import java.lang.reflect.Method;
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Type;
-import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
-import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
 /**
- * Default {@link EndpointRepository} implementation.
- *
- * <p>Listens for {@link ContextRefreshedEvent} and uses {@link RequestMappingHandlerMapping}
- * to discover every {@code @RestController} endpoint in the host application.</p>
- *
- * <p>The class is open for extension: override {@link #extractDescription(Method)} to plug in
- * a custom description source (e.g. read from {@code @Operation} or a properties file).
- * To replace the entire scanning strategy, provide a {@code @Primary @Bean EndpointRepository}.</p>
+ * Scans all {@code @RestController} endpoints on {@link ContextRefreshedEvent}
+ * and publishes an {@link ApiScanCompletedEvent} for downstream ingestors.
+ * Override {@link #extractDescription(Method)} to customise how descriptions are resolved.
  */
 @Component
 public class ApiMetadataScanner implements EndpointRepository {
@@ -46,53 +39,50 @@ public class ApiMetadataScanner implements EndpointRepository {
     );
 
     private final RequestMappingHandlerMapping handlerMapping;
+    private final ApplicationEventPublisher eventPublisher;
     private final AtomicBoolean scanned = new AtomicBoolean(false);
-    private volatile List<ApiEndpointMetadata> scannedEndpoints = Collections.emptyList();
+    private volatile List<ApiEndpointMetadata> scannedEndpoints = List.of();
 
-    public ApiMetadataScanner(@Qualifier("requestMappingHandlerMapping") RequestMappingHandlerMapping handlerMapping) {
+    public ApiMetadataScanner(@Qualifier("requestMappingHandlerMapping") RequestMappingHandlerMapping handlerMapping,
+                               ApplicationEventPublisher eventPublisher) {
         this.handlerMapping = handlerMapping;
+        this.eventPublisher = eventPublisher;
     }
 
     @EventListener(ContextRefreshedEvent.class)
-    @Order(1)  // Must run BEFORE ApiDocumentIngestor (@Order(2))
+    @Order(1)
     public void onApplicationEvent(ContextRefreshedEvent event) {
-        // Guard against duplicate events fired in parent/child contexts
         if (!scanned.compareAndSet(false, true)) return;
 
-        List<ApiEndpointMetadata> endpoints = new ArrayList<>();
-        Map<RequestMappingInfo, HandlerMethod> handlerMethods = handlerMapping.getHandlerMethods();
+        List<ApiEndpointMetadata> endpoints = handlerMapping.getHandlerMethods().entrySet().stream()
+                .filter(e -> isUserController(e.getValue().getBeanType()))
+                .map(e -> toMetadata(e.getKey(), e.getValue()))
+                .toList();
 
-        for (Map.Entry<RequestMappingInfo, HandlerMethod> entry : handlerMethods.entrySet()) {
-            RequestMappingInfo mappingInfo = entry.getKey();
-            HandlerMethod handlerMethod = entry.getValue();
+        this.scannedEndpoints = List.copyOf(endpoints);
+        log.info("[AgenticDocs] Scanned {} REST endpoints.", endpoints.size());
+        eventPublisher.publishEvent(new ApiScanCompletedEvent(this, endpoints));
+    }
 
-            // Only process @RestController beans; skip Agentic Docs' own internal endpoints
-            Class<?> beanType = handlerMethod.getBeanType();
-            if (!beanType.isAnnotationPresent(
-                    org.springframework.web.bind.annotation.RestController.class)) {
-                continue;
-            }
-            String beanClassName = beanType.getName();
-            if (INTERNAL_PACKAGE_PREFIXES.stream().anyMatch(beanClassName::startsWith)) {
-                continue;
-            }
+    private boolean isUserController(Class<?> beanType) {
+        return beanType.isAnnotationPresent(org.springframework.web.bind.annotation.RestController.class)
+                && INTERNAL_PACKAGE_PREFIXES.stream().noneMatch(beanType.getName()::startsWith);
+    }
 
-            String path = extractPath(mappingInfo);
-            String httpMethod = extractHttpMethod(mappingInfo);
-            String controllerName = beanType.getSimpleName();
-            String methodName = handlerMethod.getMethod().getName();
-            String description = extractDescription(handlerMethod.getMethod());
-            List<String> pathParams = extractPathParams(handlerMethod);
-            List<String> queryParams = extractQueryParams(handlerMethod);
-            String requestBodyType = extractRequestBodyType(handlerMethod);
-            String responseType = extractResponseType(handlerMethod);
-
-            endpoints.add(new ApiEndpointMetadata(path, httpMethod, controllerName, methodName,
-                    description, pathParams, queryParams, requestBodyType, responseType));
-        }
-
-        this.scannedEndpoints = Collections.unmodifiableList(endpoints);
-        log.info("[AgenticDocs] Scanned {} REST endpoints for RAG indexing.", endpoints.size());
+    private ApiEndpointMetadata toMetadata(RequestMappingInfo info, HandlerMethod hm) {
+        Class<?> beanType = hm.getBeanType();
+        Method method = hm.getMethod();
+        return new ApiEndpointMetadata(
+                extractPath(info),
+                extractHttpMethod(info),
+                beanType.getSimpleName(),
+                method.getName(),
+                extractDescription(method),
+                extractAnnotatedParams(hm, PathVariable.class),
+                extractAnnotatedParams(hm, RequestParam.class),
+                extractRequestBodyType(hm),
+                extractResponseType(hm)
+        );
     }
 
     /** Returns the immutable list of discovered endpoints. */
@@ -103,14 +93,10 @@ public class ApiMetadataScanner implements EndpointRepository {
     // ── Helpers ──────────────────────────────────────────────────────────────
 
     private String extractPath(RequestMappingInfo info) {
-        if (info.getPatternValues() != null && !info.getPatternValues().isEmpty()) {
-            return info.getPatternValues().iterator().next();
-        }
-        // Fallback for PathPatternParser-based mappings
-        if (info.getPathPatternsCondition() != null) {
-            Set<?> patterns = info.getPathPatternsCondition().getPatterns();
-            if (!patterns.isEmpty()) return patterns.iterator().next().toString();
-        }
+        var patternValues = info.getPatternValues();
+        if (patternValues != null && !patternValues.isEmpty()) return patternValues.iterator().next();
+        var condition = info.getPathPatternsCondition();
+        if (condition != null && !condition.getPatterns().isEmpty()) return condition.getPatterns().iterator().next().toString();
         return "/unknown";
     }
 
@@ -121,28 +107,24 @@ public class ApiMetadataScanner implements EndpointRepository {
         return "GET";
     }
 
-    private List<String> extractPathParams(HandlerMethod handlerMethod) {
-        List<String> params = new ArrayList<>();
-        for (MethodParameter mp : handlerMethod.getMethodParameters()) {
-            PathVariable pv = mp.getParameterAnnotation(PathVariable.class);
-            if (pv != null) {
-                String name = (pv.value() != null && !pv.value().isBlank()) ? pv.value() : mp.getParameterName();
-                params.add(name != null ? name : "param" + mp.getParameterIndex());
-            }
-        }
-        return Collections.unmodifiableList(params);
+    /** Extracts names of parameters annotated with {@code annotationType} (PathVariable or RequestParam). */
+    private <A extends java.lang.annotation.Annotation> List<String> extractAnnotatedParams(
+            HandlerMethod hm, Class<A> annotationType) {
+        return Arrays.stream(hm.getMethodParameters())
+                .filter(mp -> mp.hasParameterAnnotation(annotationType))
+                .map(mp -> resolveParamName(mp, annotationType))
+                .toList();
     }
 
-    private List<String> extractQueryParams(HandlerMethod handlerMethod) {
-        List<String> params = new ArrayList<>();
-        for (MethodParameter mp : handlerMethod.getMethodParameters()) {
-            RequestParam rp = mp.getParameterAnnotation(RequestParam.class);
-            if (rp != null) {
-                String name = (rp.value() != null && !rp.value().isBlank()) ? rp.value() : mp.getParameterName();
-                params.add(name != null ? name : "param" + mp.getParameterIndex());
-            }
-        }
-        return Collections.unmodifiableList(params);
+    @SuppressWarnings("unchecked")
+    private <A extends java.lang.annotation.Annotation> String resolveParamName(MethodParameter mp, Class<A> type) {
+        A ann = mp.getParameterAnnotation(type);
+        try {
+            String value = (String) type.getMethod("value").invoke(ann);
+            if (value != null && !value.isBlank()) return value;
+        } catch (Exception ignored) {}
+        String name = mp.getParameterName();
+        return name != null ? name : "param" + mp.getParameterIndex();
     }
 
     private String extractRequestBodyType(HandlerMethod handlerMethod) {
@@ -155,34 +137,45 @@ public class ApiMetadataScanner implements EndpointRepository {
     }
 
     private String extractResponseType(HandlerMethod handlerMethod) {
-        Class<?> returnType = handlerMethod.getMethod().getReturnType();
+        Method method = handlerMethod.getMethod();
+        Class<?> returnType = method.getReturnType();
         if (returnType == void.class || returnType == Void.class) return "void";
-        if ("ResponseEntity".equals(returnType.getSimpleName())) {
-            Type genericReturn = handlerMethod.getMethod().getGenericReturnType();
-            if (genericReturn instanceof ParameterizedType pt) {
-                Type[] args = pt.getActualTypeArguments();
-                if (args.length > 0) {
-                    String typeName = args[0].getTypeName();
-                    // strip package prefix and any trailing >
-                    int lastDot = typeName.lastIndexOf('.');
-                    return typeName.substring(lastDot + 1).replace(">", "");
-                }
-            }
+        if ("ResponseEntity".equals(returnType.getSimpleName())
+                && method.getGenericReturnType() instanceof ParameterizedType pt
+                && pt.getActualTypeArguments().length > 0) {
+            String typeName = pt.getActualTypeArguments()[0].getTypeName();
+            return typeName.substring(typeName.lastIndexOf('.') + 1).replace(">", "");
         }
         return returnType.getSimpleName();
     }
 
-    /**
-     * Returns a human-readable description for an endpoint method.
-     *
-     * <p>The default implementation returns the Java method name.
-     * Subclasses may override this to read from {@code @Operation(summary)},
-     * a resource bundle, or any other source.</p>
-     *
-     * @param method the controller handler method
-     * @return non-null description string
-     */
+    /** Reads @Operation(summary/description) if SpringDoc is present, otherwise converts the method name. */
+    @SuppressWarnings("unchecked")
     protected String extractDescription(Method method) {
-        return method.getName();
+        try {
+            Class<java.lang.annotation.Annotation> opClass =
+                    (Class<java.lang.annotation.Annotation>) Class.forName("io.swagger.v3.oas.annotations.Operation");
+            java.lang.annotation.Annotation ann = method.getAnnotation(opClass);
+            if (ann != null) {
+                for (String attr : List.of("summary", "description")) {
+                    String val = (String) opClass.getMethod(attr).invoke(ann);
+                    if (val != null && !val.isBlank()) return val;
+                }
+            }
+        } catch (Exception ignored) {}
+        return camelToSentence(method.getName());
+    }
+
+    /**
+     * Converts a camelCase identifier to a title-cased sentence.
+     * <pre>
+     *   "getEmployeeById"  →  "Get Employee By Id"
+     *   "listOrders"       →  "List Orders"
+     * </pre>
+     */
+    private static String camelToSentence(String name) {
+        if (name == null || name.isBlank()) return name;
+        String spaced = name.replaceAll("([A-Z])", " $1").trim();
+        return Character.toUpperCase(spaced.charAt(0)) + spaced.substring(1);
     }
 }
